# django-tree-queries

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  biome.json  mise.toml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: publish.yml  test.yml  tests-mariadb.yml  tests-pg.yml
docs/: Makefile  conf.py  index.rst  make.bat
tests/: .gitignore  TREE_ADMIN_IMPLEMENTATION.md  manage.py
tests/testapp/: admin.py  models.py  settings.py  test_admin.py  test_fields.py  test_ordered.py  test_queries.py  test_templatetags.py  urls.py
tests/testapp/migrations/: 0001_initial.py
tree_queries/: __init__.py  admin.py  compiler.py  fields.py  forms.py  models.py  query.py
tree_queries/locale/de/LC_MESSAGES/: django.mo  django.po
tree_queries/static/tree_queries/: tree_admin.css  tree_admin.js
tree_queries/templatetags/: tree_queries.py
