[metadata]
name = django_tree_queries
version = attr: tree_queries.__version__
description = Tree queries with explicit opt-in, without configurability
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/matthiask/django-tree-queries/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    coverage

[options.packages.find]
exclude =
    tests
    testapp

[flake8]
exclude = venv,build,docs,.tox
max-complexity = 10
max-line-length = 88

[coverage:run]
branch = True
include =
    *tree_queries*
omit =
    *migrations*
    *tests*
    *.tox*

[isort]
profile = black
combine_as_imports = True
lines_after_imports = 2
